--- a/index.html
+++ b/index.html
@@ -232,9 +232,9 @@
             <div class="bar"></div>
         </div>
         <ul>
-            <li><a href=".html">Home</a></li>
+            <li><a href="https://www.instagram.com/shaikh_waqar_05?igsh=NTRnYjJjOW94bG83">Home</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="Login.html">Login</a></li>
+            <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
 
